--- a/package.json
+++ b/package.json
@@ -49,5 +49,13 @@
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 6.0.8.",
   "main": "index.js",
   "author": "Ritu Shikha",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rits1701/QuizManagement.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Rits1701/QuizManagement/issues"
+  },
+  "homepage": "https://github.com/Rits1701/QuizManagement#readme"
 }
